# WEBAPPTACHY

./: .env.example  .gitignore  .replit  README.md  app.py  auth_app.py  auth_demo_workflow.py  config.py  cookies.txt  cookies_admin.txt  cookies_admin_test.txt  cookies_final_test.txt  cookies_parent_final.txt  cookies_parent_test.txt  cookies_principal.txt  cookies_priya2025.txt  cookies_rahul2025.txt  cookies_reception_final.txt  cookies_reception_final_test.txt  cookies_reception_test.txt  cookies_security1.txt  cookies_test_final.txt  demo_data.py  extensions.py  frontend_demo.py  integrated_app.py  pyproject.toml  replit.md  run_auth_demo.py  run_auth_system.py  run_demo.py  simple_app.py  simple_auth_server.py  start_auth_app.py  start_demo_app.py  start_main_app.py  tachyon_app.py
auth_templates/: admin_dashboard.html  admin_reports.html  admin_users.html  base.html  error.html  login.html  mentor_analytics.html  mentor_dashboard.html  mentor_students.html  operator_dashboard.html  operator_questions.html  operator_uploads.html  student_dashboard.html  student_doubts.html  student_practice.html  student_progress.html
blueprints/: __init__.py  admission_management.py  visitor_management.py
controllers/: admin_api.py  auth.py  lectures.py  mentor.py  operator.py  questions.py  students.py  syllabus.py  uploads.py
models/: __init__.py  academic.py  admission.py  attempt.py  base.py  batch.py  bookmark.py  doubt.py  embedding.py  gamification.py  lecture.py  llm_logs.py  mentor_assignment.py  otp.py  performance.py  practice_recommendation.py  practice_session.py  (+6 more)
(+50 files in other folders)
