[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-jwt-extended>=4.7.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.99.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
    "python-dotenv>=1.1.1",
    "bcrypt>=4.3.0",
    "itsdangerous>=2.2.0",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
    "flask-migrate>=4.1.0",
    "pandas>=2.3.1",
    "openpyxl>=3.1.5",
]
